force-app/main/default/objects/Violation__c/Violation__c.object-meta.xml
<CustomObject>
    <label>Violation</label>
    <nameField>
        <displayFormat>VIO - {0000}</displayFormat>
        <label>Violation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Violations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>