force-app/main/default/objects/Violation__c/fields/Notified_User_via_SMS__c.field-meta.xml
<CustomField>
    <fullName>Notified_User_via_SMS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notified User via SMS</label>
    <type>Checkbox</type>
</CustomField>