force-app/main/default/objects/Violation__c/fields/Violation_Code__c.field-meta.xml
<CustomField>
    <fullName>Violation_Code__c</fullName>
    <label>Violation Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>