force-app/main/default/objects/Violation__c/fields/Violation_Geolocation__c.field-meta.xml
<CustomField>
    <fullName>Violation_Geolocation__c</fullName>
    <label>Violation Geolocation</label>
    <scale>5</scale>
    <type>Location</type>
</CustomField>