force-app/main/default/objects/Violation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Vehicle__c</columns>
    <columns>Notified_User_via_SMS__c</columns>
    <columns>Date_of_Violation__c</columns>
    <columns>Violation_Code__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>